repository/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oydid
spec:
  replicas: 2
  selector:
    matchLabels:
      app: oydid
  template:
    metadata:
      labels:
        app: oydid
    spec:
      containers:
      - name: oydid
        image: oydid/did-base:latest
        ports:
        - containerPort: 3000
